<resources>
    <string name="app_name">Pocket Sentinel</string>
    <string name="username">Felhasználónév</string>
    <string name="password">Jelszó</string>
    <string name="login">Bejelentkezés</string>
    <string name="registration">Regisztráció</string>
    <string name="email_address">E-mail cím</string>
    <string name="password_confirm">Jelszó megerősítése</string>
    <string name="cancel">Mégse</string>
    <string name="search">Keresés</string>
    <string name="watchlist">Kedvencek</string>
    <string name="settings">Beállítások</string>
    <string name="logout">Kijelentkezés</string>

    <!--    RecyclerView resources-->
    <string name="item_price">Ár</string>
    <string name="item_symbol">Szimbólum</string>
    <string name="loginAsGuest">Bejelentkezés vendégként</string>
    <string name="delete">Törlés</string>
    <string name="account_details">Fiókadatok</string>
    <string name="phoneNumber">Telefonszám</string>
    <string name="delete_account">Fiók törlése</string>
    <string name="update_details">Adatok módosítása</string>
    <string name="item_percentage_change">Árváltozás</string>
    <string name="your_watchlist_is_empty">A listád jelenleg üres.</string>

    <string-array name="cryptocurrency_item_coin_gecko_ids">
        <item>bitcoin</item>
        <item>ethereum</item>
        <item>binancecoin</item>
        <item>solana</item>
        <item>ripple</item>
        <item>terra-luna</item>
        <item>cardano</item>
        <item>dogecoin</item>
        <item>avalanche-2</item>
        <item>polkadot</item>
    </string-array>

    <string-array name="cryptocurrency_item_symbols">
        <item>BTC</item>
        <item>ETH</item>
        <item>BNB</item>
        <item>SOL</item>
        <item>XRP</item>
        <item>LUNA</item>
        <item>ADA</item>
        <item>DOGE</item>
        <item>AVAX</item>
        <item>DOT</item>

<!--        <item>SHIB</item>-->
<!--        <item>MATIC</item>-->
<!--        <item>DAI</item>-->
<!--        <item>NEAR</item>-->
<!--        <item>TRX</item>-->

<!--        <item>CRO</item>-->
<!--        <item>LTC</item>-->
<!--        <item>BCH</item>-->
<!--        <item>LEO</item>-->
<!--        <item>LINK</item>-->
    </string-array>

    <array name="cryptocurrency_item_images">
        <item>@drawable/btc</item>
        <item>@drawable/eth</item>
        <item>@drawable/bnb</item>
        <item>@drawable/sol</item>
        <item>@drawable/xrp</item>
        <item>@drawable/luna</item>
        <item>@drawable/cardano</item>
        <item>@drawable/doge</item>
        <item>@drawable/avax</item>
        <item>@drawable/polkadot</item>

<!--        <item>@drawable/btc</item>-->
<!--        <item>@drawable/eth</item>-->
<!--        <item>@drawable/bnb</item>-->
<!--        <item>@drawable/sol</item>-->
<!--        <item>@drawable/xrp</item>-->

<!--        <item>@drawable/btc</item>-->
<!--        <item>@drawable/eth</item>-->
<!--        <item>@drawable/bnb</item>-->
<!--        <item>@drawable/sol</item>-->
<!--        <item>@drawable/xrp</item>-->
    </array>

    <string-array name="cryptocurrency_item_prices">
        <item>45000</item>
        <item>2800</item>
        <item>400</item>
        <item>90</item>
        <item>0.6</item>
        <item>84.66</item>
        <item>0.8232</item>
        <item>0.1308</item>
        <item>60.85</item>
        <item>15.18</item>
    </string-array>

    <string-array name="cryptocurrency_item_percentage_changes">
        <item>0.0</item>
        <item>0.0</item>
        <item>0.0</item>
        <item>0.0</item>
        <item>0.0</item>
        <item>0.0</item>
        <item>0.0</item>
        <item>0.0</item>
        <item>0.0</item>
        <item>0.0</item>
    </string-array>

</resources>