<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_bar"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/watchlist"
        android:title="@string/watchlist"
        android:icon="@drawable/ic_watchlist"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        app:showAsAction="never"
        />
</menu>